<resources>
    <string name="app_name">MP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="un_petit_creux">Un petit creux?</string>
    <string name="selectionnez_epingle">Sélectionnez une épingle afin d’obtenir plus de détails sur ce restaurant.</string>
    <string name="kungry">Kungry</string>
    <string name="connexion">Connexion</string>
    <string name="logoKungry">logo Kungry</string>
    <string name="me_connecter">Me connecter</string>
    <string name="nouveau">Nouveau avec Kungry?</string>
    <string name="minscrire">" M'inscrire"</string>
    <string name="inscription">Inscription</string>
    <string name="dejaabonne">Déjà abonnée?</string>
    <string name="meconnecter">" Me connecter"</string>
    <string name="moncompte">Mon compte</string>
    <string name="nom">Nom</string>
    <string name="courriel">Courriel</string>
    <string name="nbreval">Nombre d\'évaluations attribuées</string>
    <string name="deconexion">Déconnexion</string>
    <string name="site_web_de_l_entreprise">Site web de l\'entreprise</string>

    <string name="title_activity_new_eval">NewEvalActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="eval">Évaluation</string>
    <string name="commentaire">Commentaire</string>
    <string name="facultatif">(facultatif)</string>
    <string name="ajouter">Ajouter une photo</string>
    <string name="soumettre">Soumettre</string>
    <string name="laisseruneeval">Pour laisser une évaluation, connectez-vous.</string>
    <string name="imageActivity">ImageActivity</string>
    <string name="imgview">imgView</string>
</resources>
