<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/ic_logo_kungry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMonCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moncompte"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/logo"/>


    <TextView
        android:id="@+id/textViewNomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/textViewMonCompte"
        android:layout_marginTop="26dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewMonCompte"/>

    <TextView
        android:id="@+id/textViewNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/textViewNomLabel"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textViewNomLabel"/>

    <TextView
        android:id="@+id/textViewCourrielLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courriel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/textViewMonCompte"
        android:layout_marginTop="26dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewNom"/>

    <TextView
        android:id="@+id/textViewCourriel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/textViewNomLabel"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCourrielLabel"/>
    <TextView
        android:id="@+id/textViewEvalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nbreval"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/textViewMonCompte"
        android:layout_marginTop="26dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewCourriel"/>

    <TextView
        android:id="@+id/textViewEval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/textViewNomLabel"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textViewEvalLabel"/>
    <Button
        android:id="@+id/buttonDeconnexion"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/deconexion"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/custom_rounded_button_black"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>