<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutProfil"
    android:background="@drawable/background_form_layerlist"
    >

    <ImageView
        android:id="@+id/imageViewKangarooo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/logoKungry"
        app:srcCompat="@drawable/ic_australian_kangaroo_logo" />

    <TextView
        android:id="@+id/textViewKungry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kungry"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewKangarooo"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textInscriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/san_francisco_display_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewKungry"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_rounded_edittext"
        android:fontFamily="@font/san_francisco_display_light"
        android:ems="10"
        android:hint="Prenom"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInscriptionLabel" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_rounded_edittext"
        android:fontFamily="@font/san_francisco_display_light"
        android:ems="10"
        android:hint="Nom"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPrenom" />
    <EditText
        android:id="@+id/editTextCourriel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_rounded_edittext"
        android:fontFamily="@font/san_francisco_display_light"
        android:ems="10"
        android:hint="Courriel"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNom" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_rounded_edittext"
        android:fontFamily="@font/san_francisco_display_light"
        android:ems="10"
        android:hint="Mot de passe"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCourriel" />

    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/minscrire"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/san_francisco_display_heavy"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        android:background="@drawable/custom_rounded_button_green"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonInscription"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >
            <TextView
                android:id="@+id/textViewNouveau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dejaabonne"
                android:fontFamily="@font/san_francisco_display_light"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
            />

            <TextView
                android:id="@+id/textViewMeConnecter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meconnecter"
                android:fontFamily="@font/san_francisco_display_heavy"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>