<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_logo_kungry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEvaluationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/eval"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />


        <RatingBar
            android:id="@+id/stars_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:numStars="5"
            app:layout_constraintStart_toStartOf="@+id/textViewEvaluationLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewEvaluationLabel" />

        <TextView
            android:id="@+id/textViewCommentaireLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/commentaire"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/textViewEvaluationLabel"
            app:layout_constraintTop_toBottomOf="@+id/stars_layout" />
        <TextView
            android:id="@+id/textViewFacultatif1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="#000000"
            android:text="@string/facultatif"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/textViewCommentaireLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewCommentaireLabel"
            app:layout_constraintBottom_toBottomOf="@id/textViewCommentaireLabel"/>

        <EditText
            android:id="@+id/editTextCommentaire"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_rounded_button_white"
            app:layout_constraintStart_toStartOf="@id/textViewCommentaireLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewCommentaireLabel"
            />
        <TextView
            android:id="@+id/textViewPhotoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/ajouter"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/textViewEvaluationLabel"
            app:layout_constraintTop_toBottomOf="@+id/editTextCommentaire" />
        <TextView
            android:id="@+id/textViewFacultatif2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="#000000"
            android:text="@string/facultatif"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/textViewPhotoLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewPhotoLabel"
            app:layout_constraintBottom_toBottomOf="@id/textViewPhotoLabel"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/addImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_rounded_button_grey"
            app:srcCompat="@drawable/ic_icone_add"
            app:layout_constraintStart_toStartOf="@id/textViewPhotoLabel"
            app:layout_constraintTop_toBottomOf="@id/textViewPhotoLabel"/>

        <Button
            android:id="@+id/buttonConnexion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_rounded_button_green"
            android:text="@string/soumettre"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
